--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*
  Theme Name:   Twenty nineteen enfant de dieu
  Theme URI:    http://example.com/twenty-fifteen-child/
@@ -12,15 +11,11 @@
  Tags:         light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
  Text Domain:  twentynineteenenfant
 */
-body {
-  font-family: 'Montserrat Alternates', sans-serif;
-}
 
-.entry .entry-title::before {
-  display: none;
-}
+@import "_mixin.scss";
 
-.rayure {
-  background: repeating-linear-gradient(45deg, #606dbc, #606dbc 10px, #465298 10px, #465298 20px);
-}
-/*# sourceMappingURL=style.css.map */
+@import "_entete.scss";
+
+@import "_gutenberg.scss";
+
+@import "_footer.scss";
