--- a/style.css
+++ b/style.css
@@ -62,6 +62,42 @@ p.site-title {
   }
 }
 
+@-webkit-keyframes anim2 {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    color: black;
+  }
+  50% {
+    -webkit-transform: rotate(5deg);
+            transform: rotate(5deg);
+    color: #10243a;
+  }
+  to {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    color: black;
+  }
+}
+
+@keyframes anim2 {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    color: black;
+  }
+  50% {
+    -webkit-transform: rotate(5deg);
+            transform: rotate(5deg);
+    color: #10243a;
+  }
+  to {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    color: black;
+  }
+}
+
 .rayure {
   background: repeating-linear-gradient(45deg, white 0, white 0 10px, #556f8d 10px, #556f8d 20px);
 }
@@ -73,6 +109,11 @@ p.site-title {
 .entry-header h1:hover {
   -webkit-animation: anim1 0.5s;
           animation: anim1 0.5s;
+}
+
+.animation2 {
+  -webkit-animation: anim2 1s infinite;
+          animation: anim2 1s infinite;
 }
 
 .italika {
