Changement de la couleur de la deuxième citation

--- a/style.css
+++ b/style.css
@@ -125,6 +125,10 @@ blockquote.wp-block-quote {
   color: #556f8d;
 }
 
+.CouleurChange {
+  color: #2c3b4d;
+}
+
 .site-footer {
   color: white;
   background-color: #7e9fc5;
