Changement de la couleur des citations à nouveau

--- a/sass/_gutenberg.scss
+++ b/sass/_gutenberg.scss
@@ -44,13 +44,17 @@
   font-style: italic;
 }
 
-blockquote.wp-block-quote{
+/*blockquote.wp-block-quote{
   font-style: italic;
+  color: rgba($color: #556f8d, $alpha: 1.0);
+}*/
+
+.CouleurChange1{
   color: rgba($color: #556f8d, $alpha: 1.0);
 }
 
 .CouleurChange{
-  color: #2c3b4d;
+  color: #00377a;
 }
 
 
